--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background-color: #d8d8d8; 
+    background-color:#708090; 
 }
 
 header {
@@ -66,7 +66,7 @@ section {
     max-width: 600px;
     margin-bottom: 20px;
     padding: 20px;
-    background-color: #bab1b1;
+    background-color: #aeb5bd;
     border: 1px solid #dcdde1;
     border-radius: 8px;
     text-align: center;
